@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libevtx],
- [20141026],
+ [20141112],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
