@@ -83,6 +83,10 @@ PyObject *pyevtx_record_get_event_identifier(
            pyevtx_record_t *pyevtx_record,
            PyObject *arguments );
 
+PyObject *pyevtx_record_get_event_identifier_qualifiers(
+           pyevtx_record_t *pyevtx_record,
+           PyObject *arguments );
+
 PyObject *pyevtx_record_get_event_level(
            pyevtx_record_t *pyevtx_record,
            PyObject *arguments );
